--- a/index.html
+++ b/index.html
@@ -189,6 +189,24 @@
                                 <option value="20"
                                     data-icon="https://github.com/marcoC76/RCC/blob/master/images/personaje10_H.png?raw=true"
                                     class="left">20</option>
+                                <option value="21"
+                                    data-icon="https://github.com/marcoC76/RCC/blob/master/images/personaje11.png?raw=true"
+                                    class="left">21</option>
+                                <option value="22"
+                                    data-icon="https://github.com/marcoC76/RCC/blob/master/images/personaje11_H.png?raw=true"
+                                    class="left">22</option>
+                                <option value="23"
+                                    data-icon="https://github.com/marcoC76/RCC/blob/master/images/personaje12.png?raw=true"
+                                    class="left">23</option>
+                                <option value="24"
+                                    data-icon="https://github.com/marcoC76/RCC/blob/master/images/personaje12_H.png?raw=true"
+                                    class="left">24</option>
+                                <option value="25"
+                                    data-icon="https://github.com/marcoC76/RCC/blob/master/images/personaje13.png?raw=true"
+                                    class="left">25</option>
+                                <option value="26"
+                                    data-icon="https://github.com/marcoC76/RCC/blob/master/images/personaje13_H.png?raw=true"
+                                    class="left">26</option>
                                 <option value="0"
                                     data-icon="https://github.com/marcoC76/RCC/blob/master/images/personaje0.png?raw=true"
                                     class="left">0</option>
