--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                                     autocomplete="off">
                             </div>
                             <br>
-                            <div class=" nes-container is-rounded is-centered">
+                            <div class=" nes-container is-rounded is-centered is-dark">
                                 <span style="font-size: 1em;">Apunta y guarda bien este ID y mantenlo
                                     privado</span>
                             </div>
