--- a/index.html
+++ b/index.html
@@ -226,10 +226,12 @@
                                     autocomplete="off">
                             </div>
                             <br>
-                            <div class=" nes-container is-rounded is-centered is-dark">
+                            <div class=" nes-balloon from-right nes-container is-rounded is-centered is-dark">
                                 <span style="font-size: 1em;">Apunta y guarda bien este ID y mantenlo
                                     privado</span>
+
                             </div>
+<i class="nes-bcrikko"></i>
 
                         </div>
                     </div>
