--- a/index.html
+++ b/index.html
@@ -226,13 +226,14 @@
                                     autocomplete="off">
                             </div>
                             <br>
+<section class="message -right">
                             <div class=" nes-balloon from-right is-dark">
                                 <span style="font-size: 1em;">Apunta y guarda bien este ID y mantenlo
                                     privado</span>
 
                             </div>
 <i class="nes-bcrikko"></i>
-
+</section>
                         </div>
                     </div>
                 </div>
