--- a/index.html
+++ b/index.html
@@ -226,8 +226,8 @@
                                     autocomplete="off">
                             </div>
                             <br>
-<section class="message -right">
-                            <div class=" nes-balloon from-right is-dark">
+<section class="message -left">
+                            <div class=" nes-balloon from-right">
                                 <span style="font-size: 1em;">Apunta y guarda bien este ID y mantenlo
                                     privado</span>
 
