--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                             </div>
                             <br>
 <section class="message -left">
-                            <div class=" nes-balloon from-right">
+                            <div class=" nes-balloon from-left" style="background-color: black; color: white;">
                                 <span style="font-size: 1em;">Apunta y guarda bien este ID y mantenlo
                                     privado</span>
 
