--- a/index.html
+++ b/index.html
@@ -227,12 +227,12 @@
                             </div>
                             <br>
 <section class="message -left">
-                            <div class=" nes-balloon from-left is-black" style="">
+                            <div class=" nes-balloon from-left is-dark" style="">
                                 <span style="font-size: 1em;">Apunta y guarda bien este ID y mantenlo
                                     privado</span>
 
                             </div>
-<i class="nes-bcrikko"></i>
+<i class="nes-kirby"></i>
 </section>
                         </div>
                     </div>
