--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             padding-left: 5%;
             padding-right: 5%;
             display: grid;
-            grid-template-columns: 1fr 4fr 1fr;
+            grid-template-columns: 1fr 50% 1fr;
             grid-template-rows: 1fr;
             grid-column-gap: 0px;
             grid-row-gap: 0px;
@@ -51,7 +51,16 @@
         .nes-container.is-rounded.with-title>.title {
             margin-top: -2.5rem;
         }
-        div1 { grid-area: 2 / 2 / 6 / 3; }
+
+        .div1 {
+            grid-area: 2 / 2 / 6 / 3;
+        }
+
+        @media (max-width: 600px) {
+            .container {
+                grid-template-columns: 1fr 98% 1fr;
+            }
+        }
     </style>
 </head>
 
@@ -92,7 +101,7 @@
                             <div class="nes-field is-inline">
                                 <label for="Nick">Nombre de Usuario:</label>
                                 <input id="Nick" name="Nick" type="text" required autocomplete="off"
-                                    class="nes-input is-dark" placeholder="Un alias, nombre de usuario o apodo">
+                                    class="nes-input is-dark" >
                                 <!-- <span class="helper-text" data-error="wrong" data-success="right">Un alias, nombre de
                                     usuario o apodo que te identifique</span> -->
                             </div>
@@ -195,7 +204,7 @@
                                     </div>
                                 </div>
                                 <center>
-                                    
+
                                     <div id="avatarImg" class="">
 
                                     </div>
@@ -229,14 +238,13 @@
                         <div class="nes-field ">
                             <div class="">
                                 <label for="ID">ID:</label>
-                                <input class="nes-input is-dark" id="ID" name="ID" type="text" focus disabled
-                                    autocomplete="off">
+                                <input class="nes-input is-dark is-error" id="ID" name="ID" type="text" focus disabled
+                                    autocomplete="off" style="color:#E76E55">
                             </div>
                             <br>
                             <section class="message -left">
                                 <div class="nes-balloon from-left" style="left:3rem;">
-                                    <span style="font-size: 1em;">Apunta y guarda bien este ID y mantenlo
-                                        privado</span>
+                                    <span style="font-size: 1em;">Apunta y guarda bien este ID.<br> Debes mantenerlo privado.</span>
                                 </div> <br>
                                 <i class="nes-kirby"></i>
                             </section>
