--- a/indexOtro.html
+++ b/indexOtro.html
@@ -176,10 +176,10 @@
                 <div id="principal" class="nes-balloon from-right  with-title is-rounded"
                     style="background-color:#50a5c7d5">
 
-                    <h1 style="text-transform: uppercase; background-color:#50A6C7; font-size: 1.5em;" class="title">
+                    <h1 style="text-transform: uppercase; background-color:#50A6C7; font-size: 1.5em;" class="title typewriter">
                         Estilo de aprendizaje</h1>
                     <!-- One "tab" for each step in the form: -->
-                    <div class="tab typewriter">
+                    <div class="tab">
                         <p>
                             El numero de estrellas refleja tu identifiacion con cada frase:
                         </p>
@@ -195,7 +195,7 @@
                         </p>
                     </div>
                     <div class="tab">
-                        <div class="typewriter">
+                        <div class="">
                             <label for="a1">Yo puedo recordar algo si lo digo en vos alta</label>
                             <div class="nes-select is-dark">
                                 <select id="a1" class="icons" onchange="auditivo1(value);">
