--- a/indexOtro.html
+++ b/indexOtro.html
@@ -132,9 +132,9 @@
 .typewriter {
   overflow: hidden; /* Ensures the content is not revealed until the animation */
   border-right: .15em solid black; /* The typwriter cursor */
-  white-space: nowrap; /* Keeps the content on a single line */
-  margin: 0; /* Gives that scrolling effect as the typing happens */
-  letter-spacing: 0em; /* Adjust as needed */
+ /* white-space: nowrap;  Keeps the content on a single line */
+/*  margin: 0;  Gives that scrolling effect as the typing happens */
+ /* letter-spacing: 0em; Adjust as needed */
   animation: 
     typing 3.5s steps(30, end),
     blink-caret .5s step-end infinite;
@@ -175,7 +175,7 @@
                     style="background-color:#50a5c7d5">
 
                     <h1 style="text-transform: uppercase; background-color:#50A6C7; font-size: 1.5em;" class="title typewriter">
-                        Estilo de aprendizaje</h1>
+                        Estilo de <br> aprendizaje</h1>
                     <!-- One "tab" for each step in the form: -->
                     <div class="tab">
                         <p>
