--- a/indexOtro.html
+++ b/indexOtro.html
@@ -564,7 +564,7 @@
             </section>
         </form>
     </div>
-
+<script src="js.js"></script>
     <script>
         var a = 0;
         var v = 0;
