--- a/index.html
+++ b/index.html
@@ -64,6 +64,13 @@
             clip-path: circle(40%);
         }
 
+        .no-seleccionable {
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+        }
+
         @media (max-width: 600px) {
             .container {
                 grid-template-columns: 1fr 98% 1fr;
@@ -83,7 +90,7 @@
         <br>
         <div class="div1">
 
-            <form id="form">
+            <form id="form" class="no-seleccionable">
                 <div class="nes-container  with-title is-rounded" style="background-color:#50a5c7ce">
                     <h1 style="text-transform: uppercase; background-color:#50A6C7; font-size: 1.5em;" class="title">
                         Registro en la lista</h1>
@@ -298,143 +305,151 @@
                 case 3:
                     ava =
                         `https://github.com/marcoC76/RCC/blob/master/images/personaje2.png?raw=true`;
-                        ava2 =
+                    ava2 =
                         `https://github.com/marcoC76/RCC/blob/master/images/caracter2.png?raw=true`;
                     break;
                 case 4:
                     ava =
                         `https://github.com/marcoC76/RCC/blob/master/images/personaje2_H.png?raw=true`;
-                        ava2 =
+                    ava2 =
                         `https://github.com/marcoC76/RCC/blob/master/images/caracter2_H.png?raw=true`;
                     break;
                 case 5:
                     ava =
                         `https://github.com/marcoC76/RCC/blob/master/images/personaje3.png?raw=true`;
-                        ava2 =
+                    ava2 =
                         `https://github.com/marcoC76/RCC/blob/master/images/caracter3.png?raw=true`;
                     break;
                 case 6:
                     ava =
                         `https://github.com/marcoC76/RCC/blob/master/images/personaje3_H.png?raw=true`;
-                        ava2 =
+                    ava2 =
                         `https://github.com/marcoC76/RCC/blob/master/images/caracter3_H.png?raw=true`;
                     break;
                 case 7:
                     ava =
                         `https://github.com/marcoC76/RCC/blob/master/images/personaje4.png?raw=true`;
-                        ava2 =
+                    ava2 =
                         `https://github.com/marcoC76/RCC/blob/master/images/caracter4.png?raw=true`;
                     break;
                 case 8:
                     ava =
                         `https://github.com/marcoC76/RCC/blob/master/images/personaje4_H.png?raw=true`;
-                        ava2 =
+                    ava2 =
                         `https://github.com/marcoC76/RCC/blob/master/images/caracter4_H.png?raw=true`;
                     break;
                 case 9:
                     ava =
                         `https://github.com/marcoC76/RCC/blob/master/images/personaje5.png?raw=true`;
-                        ava2 =
+                    ava2 =
                         `https://github.com/marcoC76/RCC/blob/master/images/caracter5.png?raw=true`;
                     break;
                 case 10:
                     ava =
                         `https://github.com/marcoC76/RCC/blob/master/images/personaje5_H.png?raw=true`;
-                        ava2 =
+                    ava2 =
                         `https://github.com/marcoC76/RCC/blob/master/images/caracter5_H.png?raw=true`;
                     break;
                 case 11:
                     ava =
                         `https://github.com/marcoC76/RCC/blob/master/images/personaje6.png?raw=true`;
-                        ava2 =
+                    ava2 =
                         `https://github.com/marcoC76/RCC/blob/master/images/caracter6.png?raw=true`;
                     break;
                 case 12:
                     ava =
                         `https://github.com/marcoC76/RCC/blob/master/images/personaje6_H.png?raw=true`;
-                        ava2 =
+                    ava2 =
                         `https://github.com/marcoC76/RCC/blob/master/images/caracter6_H.png?raw=true`;
                     break;
                 case 13:
                     ava =
                         `https://github.com/marcoC76/RCC/blob/master/images/personaje7.png?raw=true`;
-                        ava2 =
+                    ava2 =
                         `https://github.com/marcoC76/RCC/blob/master/images/caracter7.png?raw=true`;
                     break;
                 case 14:
                     ava =
                         `https://github.com/marcoC76/RCC/blob/master/images/personaje7_H.png?raw=true`;
-                        ava2 =
+                    ava2 =
                         `https://github.com/marcoC76/RCC/blob/master/images/caracter7_H.png?raw=true`;
                     break;
                 case 15:
                     ava =
                         `https://github.com/marcoC76/RCC/blob/master/images/personaje8.png?raw=true`;
-                        ava2 =
+                    ava2 =
                         `https://github.com/marcoC76/RCC/blob/master/images/caracter8.png?raw=true`;
                     break;
                 case 16:
                     ava =
                         `https://github.com/marcoC76/RCC/blob/master/images/personaje8_H.png?raw=true`;
-                        ava2 =
+                    ava2 =
                         `https://github.com/marcoC76/RCC/blob/master/images/caracter8_H.png?raw=true`;
                     break;
                 case 17:
                     ava =
                         `https://github.com/marcoC76/RCC/blob/master/images/personaje9.png?raw=true`;
-                        ava2 =
+                    ava2 =
                         `https://github.com/marcoC76/RCC/blob/master/images/caracter9.png?raw=true`;
                     break;
                 case 18:
                     ava =
                         `https://github.com/marcoC76/RCC/blob/master/images/personaje9_H.png?raw=true`;
-                        ava2 =
+                    ava2 =
                         `https://github.com/marcoC76/RCC/blob/master/images/caracter9_H.png?raw=true`;
                     break;
                 case 19:
                     ava =
                         `https://github.com/marcoC76/RCC/blob/master/images/personaje10.png?raw=true`;
-                        ava2 =
+                    ava2 =
                         `https://github.com/marcoC76/RCC/blob/master/images/caracter10.png?raw=true`;
                     break;
                 case 20:
                     ava =
-                        `https://github.com/marcoC76/RCC/blob/master/images/personaje10_H.png?raw=true`; ava2 =
+                        `https://github.com/marcoC76/RCC/blob/master/images/personaje10_H.png?raw=true`;
+                    ava2 =
                         `https://github.com/marcoC76/RCC/blob/master/images/caracter10_H.png?raw=true`;
                     break;
                 case 21:
                     ava =
-                        `https://github.com/marcoC76/RCC/blob/master/images/personaje11.png?raw=true`; ava2 =
+                        `https://github.com/marcoC76/RCC/blob/master/images/personaje11.png?raw=true`;
+                    ava2 =
                         `https://github.com/marcoC76/RCC/blob/master/images/caracter11.png?raw=true`;
                     break;
                 case 22:
                     ava =
-                        `https://github.com/marcoC76/RCC/blob/master/images/personaje11_H.png?raw=true`; ava2 =
+                        `https://github.com/marcoC76/RCC/blob/master/images/personaje11_H.png?raw=true`;
+                    ava2 =
                         `https://github.com/marcoC76/RCC/blob/master/images/caracter11_H.png?raw=true`;
                     break;
                 case 23:
                     ava =
-                        `https://github.com/marcoC76/RCC/blob/master/images/personaje12.png?raw=true`; ava2 =
+                        `https://github.com/marcoC76/RCC/blob/master/images/personaje12.png?raw=true`;
+                    ava2 =
                         `https://github.com/marcoC76/RCC/blob/master/images/caracter12.png?raw=true`;
                     break;
                 case 24:
                     ava =
-                        `https://github.com/marcoC76/RCC/blob/master/images/personaje12_H.png?raw=true`; ava2 =
+                        `https://github.com/marcoC76/RCC/blob/master/images/personaje12_H.png?raw=true`;
+                    ava2 =
                         `https://github.com/marcoC76/RCC/blob/master/images/caracter12_H.png?raw=true`;
                     break;
                 case 25:
                     ava =
-                        `https://github.com/marcoC76/RCC/blob/master/images/personaje13.png?raw=true`; ava2 =
+                        `https://github.com/marcoC76/RCC/blob/master/images/personaje13.png?raw=true`;
+                    ava2 =
                         `https://github.com/marcoC76/RCC/blob/master/images/caracter13.png?raw=true`;
                     break;
                 case 26:
                     ava =
-                        `https://github.com/marcoC76/RCC/blob/master/images/personaje13_H.png?raw=true`; ava2 =
+                        `https://github.com/marcoC76/RCC/blob/master/images/personaje13_H.png?raw=true`;
+                    ava2 =
                         `https://github.com/marcoC76/RCC/blob/master/images/caracter13_H.png?raw=true`;
                     break;
                 case 0:
                     ava =
-                        `https://github.com/marcoC76/RCC/blob/master/images/personaje0.png?raw=true`; ava2 =
+                        `https://github.com/marcoC76/RCC/blob/master/images/personaje0.png?raw=true`;
+                    ava2 =
                         ` https://github.com/marcoC76/RCC/blob/master/images/caracter0.png?raw=true`;
                     break;
 
