--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
         }
 
         #yo {
-            width: 15%;
+            width: 30%;
+            filter: drop-shadow(0 10px 5px #333)
         }
 
         #avatarI {
@@ -77,7 +78,7 @@
             }
 
             #yo {
-                width: 40%;
+                width: 50%;
             }
         }
     </style>
@@ -214,7 +215,7 @@
                                     <span style="font-size: 1em;">Apunta y guarda bien este ID.<br> Debes mantenerlo
                                         privado.</span>
                                 </div> <br>
-                                <img id="yo" src="images/yo.gif" alt="" srcset="">
+                                <img id="yo" src="images/yoAnim.gif" alt="" srcset="">
                                 <!-- <i class="nes-kirby"></i> -->
                             </section>
                         </div>
