--- a/indexOtro.html
+++ b/indexOtro.html
@@ -156,6 +156,7 @@
         font-family: "Poke";
         font-size: 1em;
         font-weight: bold;
+        text-justify: auto;  
     }
 
     @media (max-width: 600px) {
