--- a/indexOtro.html
+++ b/indexOtro.html
@@ -190,7 +190,7 @@
                     <!-- One "tab" for each step in the form: -->
                     <div class="tab animate__animated animate__fadeInLeft animate__delay-2s ">
                         <p class="fuente">
-                            El número de estrellas refleja tu identifiación con cada frase:
+                            El número de span estrellas refleja tu identifiación con cada frase:
                         </p>
                         <p class="fuente">
                             <i class="nes-icon star"></i> = Menos identificado
@@ -754,7 +754,7 @@
             console.log(k);
             var dominante;
             var dom;
-            var envioUrl="";
+            var envioUrl = "";
             if (a >= v) {
                 if (a >= k) {
                     dom = "Auditivo";
@@ -867,7 +867,7 @@
             document.getElementById("contenido").style.display = "none";
         }
     </script>
-
+    
 </body>
 
 </html>
