--- a/index.html
+++ b/index.html
@@ -604,13 +604,14 @@
                                         Clan es:
                                         <a href="#" class="nes-badge"> <span class="is-dark">${Equipo}</span></a></h4>
                                     <br> <br>
-                                    <center>
-                                        <input class="nes-btn is-success" onclick="vak();" type="button" value="Cuestionario VAK"
-                                            id="nuevo" />
-                                    </center>
+                                    
                                 </div>
                                 <br>
                             `;
+                            /* <center>
+                                        <input class="nes-btn is-success" onclick="vak();" type="button" value="Cuestionario VAK"
+                                            id="nuevo" />
+                                    </center> */
                 document.getElementById("form").innerHTML = salida;
             }
         }
