--- a/indexOtro.html
+++ b/indexOtro.html
@@ -211,7 +211,7 @@
                         <br>
                         <div class="nes-field is-inline">
                             <label for="id">Grupo:</label>
-                            <input id="id" name="id" type="text" required autocomplete="off" class="nes-input is-dark">
+                            <input id="id" name="id" type="text" required maxlength="1" placeholder="Solo la letra" autocomplete="off" class="nes-input is-dark">
                         </div>
                     </div>
                     <div class="tab">
