--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
                         <!-- <h2>Se terminó el registro</h2> -->
                         <div class="row">
-                            <div class="nes-field is-inline">
+                        <!--     <div class="nes-field is-inline">
                                 <label for="ApellidoPaterno">Apellido Paterno:</label>
                                 <input id="ApellidoPaterno" name="ApellidoPaterno" type="text" required
                                     autocomplete="off" class="nes-input is-dark">
@@ -121,7 +121,7 @@
                             <div class="nes-field is-inline">
                                 <label for="Nick">Nombre de Usuario:</label>
                                 <input id="Nick" name="Nick" type="text" required autocomplete="off"
-                                    class="nes-input is-dark">
+                                    class="nes-input is-dark"> -->
                                 <!-- <span class="helper-text" data-error="wrong" data-success="right">Un alias, nombre de
                                     usuario o apodo que te identifique</span> -->
                             </div>
@@ -190,7 +190,7 @@
 
                             </div> -->
                             <br>
-                            <label for="Grupo">Grupo:</label>
+                            <!--<label for="Grupo">Grupo:</label>
                             <div class="nes-select is-dark">
                                 <select id="Grupo" required onchange="grupo(this.value)">
                                     <option value="" disabled selected>Escoge un grupo...</option>
@@ -215,9 +215,9 @@
                                     <span style="font-size: 1em;">Apunta y guarda bien este <span id="block">ID</span>.<br> Debes mantenerlo
                                     <span id="block2">privado</span>.</span>
                                 </div> <br>
-                                <img id="yo" src="images/yoAnim.gif" alt="" srcset="">
+                                <img id="yo" src="images/yoAnim.gif" alt="" srcset=""> -->
                                 <!-- <i class="nes-kirby"></i> -->
-                            </section>
+                         <!--    </section>
                         </div>
                     </div>
                 </div>
@@ -233,7 +233,7 @@
 
 
             </form>
-        </div>
+        </div> -->
         <!--  <center>
             <input class="btn btn-large white black-text" onclick="download()" type="button" value="Descargar"
                 id="descargar" />
